@@ -2,7 +2,7 @@
 name    = Task-BeLike-LESPEA
 author  = Adam Lesperance <lespea@gmail.com>
 license = Perl_5
-version = 2.002001
+version = 2.003000
 
 copyright_holder = Adam Lesperance
 copyright_year   = 2012
@@ -37,6 +37,7 @@ Async::Interrupt = 0.000000
 Coro = 0.000000
 DBD::CSV = 0.000000
 DBI = 0.000000
+Data::Dumper::Perltidy = 0.000000
 Data::Printer = 0.000000
 Date::Calc = 0.000000
 Date::Manip = 0.000000
@@ -50,22 +51,13 @@ DateTime::Format::Duration::DurationString = 0.000000
 DateTime::Format::Duration::XSD = 0.000000
 DateTime::Format::Epoch = 0.000000
 DateTime::Format::Epoch::ActiveDirectory = 0.000000
-DateTime::Format::Epoch::DotNet = 0.000000
-DateTime::Format::Epoch::JD = 0.000000
-DateTime::Format::Epoch::Lilian = 0.000000
-DateTime::Format::Epoch::MJD = 0.000000
 DateTime::Format::Epoch::MacOS = 0.000000
-DateTime::Format::Epoch::RJD = 0.000000
-DateTime::Format::Epoch::RataDie = 0.000000
-DateTime::Format::Epoch::TAI64 = 0.000000
-DateTime::Format::Epoch::TJD = 0.000000
 DateTime::Format::Epoch::Unix = 0.000000
 DateTime::Format::Excel = 0.000000
 DateTime::Format::Flexible = 0.000000
 DateTime::Format::HTTP = 0.000000
 DateTime::Format::Human = 0.000000
 DateTime::Format::Human::Duration = 0.000000
-DateTime::Format::ICal = 0.000000
 DateTime::Format::ISO8601 = 0.000000
 DateTime::Format::MSSQL = 0.000000
 DateTime::Format::MySQL = 0.000000
@@ -94,12 +86,8 @@ DateTime::Format::Roman = 0.000000
 DateTime::Format::SQLite = 0.000000
 DateTime::Format::Strptime = 0.000000
 DateTime::Format::Sybase = 0.000000
-DateTime::Format::Variant = 0.000000
-DateTime::Format::W3CDTF = 0.000000
 DateTime::Format::WindowsFileTime = 0.000000
-DateTime::Format::XMLTV = 0.000000
 DateTime::Format::XSD = 0.000000
-DateTime::Format::x509 = 0.000000
 Devel::Cover = 0.000000
 Devel::NYTProf = 0.000000
 Devel::REPL = 0.000000
@@ -108,7 +96,7 @@ Dist::Zilla = 0.000000
 Dist::Zilla::App::Command::cover = 0.000000
 Dist::Zilla::App::Command::perltidy = 0.000000
 Dist::Zilla::App::Command::shell = 0.000000
-Dist::Zilla::PluginBundle::Author::LESPEA = 1.003000
+Dist::Zilla::PluginBundle::Author::LESPEA = 1.005000
 Dist::Zilla::Shell = 0.000000
 EV = 0.000000
 Encode = 0.000000
@@ -171,6 +159,7 @@ Net::DNS = 0.000000
 Net::IP = 0.000000
 Net::Netmask = 0.000000
 Net::Ping = 0.000000
+NetAddr::MAC = 0.000000
 PPI::HTML = 0.000000
 Perl::Critic = 0.000000
 Perl::Tidy = 0.000000
