@@ -4,6 +4,7 @@ call ppm install Async::Interrupt
 call ppm install Coro
 call ppm install DBD::CSV
 call ppm install DBI
+call ppm install Data::Dumper::Perltidy
 call ppm install Data::Printer
 call ppm install Date::Calc
 call ppm install Date::Manip
@@ -17,22 +18,13 @@ call ppm install DateTime::Format::Duration::DurationString
 call ppm install DateTime::Format::Duration::XSD
 call ppm install DateTime::Format::Epoch
 call ppm install DateTime::Format::Epoch::ActiveDirectory
-call ppm install DateTime::Format::Epoch::DotNet
-call ppm install DateTime::Format::Epoch::JD
-call ppm install DateTime::Format::Epoch::Lilian
-call ppm install DateTime::Format::Epoch::MJD
 call ppm install DateTime::Format::Epoch::MacOS
-call ppm install DateTime::Format::Epoch::RJD
-call ppm install DateTime::Format::Epoch::RataDie
-call ppm install DateTime::Format::Epoch::TAI64
-call ppm install DateTime::Format::Epoch::TJD
 call ppm install DateTime::Format::Epoch::Unix
 call ppm install DateTime::Format::Excel
 call ppm install DateTime::Format::Flexible
 call ppm install DateTime::Format::HTTP
 call ppm install DateTime::Format::Human
 call ppm install DateTime::Format::Human::Duration
-call ppm install DateTime::Format::ICal
 call ppm install DateTime::Format::ISO8601
 call ppm install DateTime::Format::MSSQL
 call ppm install DateTime::Format::MySQL
@@ -61,12 +53,8 @@ call ppm install DateTime::Format::Roman
 call ppm install DateTime::Format::SQLite
 call ppm install DateTime::Format::Strptime
 call ppm install DateTime::Format::Sybase
-call ppm install DateTime::Format::Variant
-call ppm install DateTime::Format::W3CDTF
 call ppm install DateTime::Format::WindowsFileTime
-call ppm install DateTime::Format::XMLTV
 call ppm install DateTime::Format::XSD
-call ppm install DateTime::Format::x509
 call ppm install Devel::Cover
 call ppm install Devel::NYTProf
 call ppm install Devel::REPL
@@ -138,6 +126,7 @@ call ppm install Net::DNS
 call ppm install Net::IP
 call ppm install Net::Netmask
 call ppm install Net::Ping
+call ppm install NetAddr::MAC
 call ppm install PPI::HTML
 call ppm install Perl::Critic
 call ppm install Perl::Tidy
